Updated styles to make sure error messages aren't overlapping

--- a/web/src/stylesheets/pages/page--plan-profile.scss
+++ b/web/src/stylesheets/pages/page--plan-profile.scss
@@ -153,6 +153,10 @@
 .user-positions.plan-positions {
 	margin-top: -2rem;
 
+	.message-container {
+		margin: 20px 0 10px;
+	}
+
 	.miwt-table-con {
 		overflow: auto;
 		width: 100%;
